# proxy/main.go
@@ -29,10 +29,18 @@ import (
 // @description API для поиска
 // @host localhost:8080
 // @BasePath
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
 
 // @RequestAddressSearch представляет запрос для поиска
 // @Description Этот эндпоинт позволяет получить адрес по наименованию
 // @Param address body ResponseAddress true "Географические координаты"
+
+type GeocodeRequest struct {
+	Lat float64 `json:"lat"`
+	Lng float64 `json:"lng"`
+}
 
 type RequestAddressSearch struct {
 	Query string `json:"query"`
@@ -48,9 +56,6 @@ type ResponseAddress struct {
 	} `json:"suggestions"`
 }
 
-// ErrorResponse представляет ответ с ошибкой
-// @Description Ошибка, возникающая при обработке запроса
-// @Success 400 {object} ErrorResponse
 type ErrorResponse struct {
 	BadRequest      string `json:"400"`
 	DadataBad       string `json:"500"`
@@ -58,72 +63,119 @@ type ErrorResponse struct {
 }
 
 var (
-	tokenAuth *jwtauth.JWTAuth
-	users     = make(map[string]string)
-)
-
-func init() {
 	tokenAuth = jwtauth.New("HS256", []byte("your_secret_key"), nil)
-}
+	users     = make(map[string]User) // Хранение пользователей
+)
 
 type User struct {
 	Username string `json:"username"`
 	Password string `json:"password"`
 }
 
+// TokenResponse представляет ответ с токеном
+type TokenResponse struct {
+	Token string `json:"token"`
+}
+
+// LoginResponse представляет ответ при успешном входе
+type LoginResponse struct {
+	Message string `json:"message"`
+}
+
+// @Summary Register a new user
+// @Description This endpoint allows you to register a new user with a username and password.
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param user body User true "User registration details"
+// @Success 201 {object} TokenResponse "User registered successfully"
+// @Failure 400 {object} ErrorResponse "Invalid request"
+// @Failure 409 {object} ErrorResponse "User already exists"
+// @Failure 500 {object} ErrorResponse "Internal server error"
+// @Router /api/register [post]
 func Register(w http.ResponseWriter, r *http.Request) {
 	var user User
 	if err := json.NewDecoder(r.Body).Decode(&user); err != nil {
+		http.Error(w, "Invalid request", http.StatusBadRequest)
 		return
 	}
-	if _, exists := users[user.Username]; exists {
-		return
-	}
-	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(user.Password), bcrypt.DefaultCost)
 
+	if _, exists := users[user.Username]; exists {
+		http.Error(w, "User already exists", http.StatusConflict)
+		return
+	}
+
+	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(user.Password), bcrypt.DefaultCost)
 	if err != nil {
 		http.Error(w, "Could not hash password", http.StatusInternalServerError)
 		return
 	}
-	users[user.Username] = string(hashedPassword)
+
+	users[user.Username] = User{
+		Username: user.Username,
+		Password: string(hashedPassword),
+	}
+
+	// Используем логин пользователя в качестве user_id
+	claims := map[string]interface{}{
+		"user_id": user.Username, // Используем username как user_id
+		"exp":     time.Now().Add(time.Hour * 72).Unix(),
+	}
+	_, tokenString, err := tokenAuth.Encode(claims)
+	if err != nil {
+		http.Error(w, "Could not create token", http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Authorization", "Bearer "+tokenString)
 	w.WriteHeader(http.StatusCreated)
+	json.NewEncoder(w).Encode(TokenResponse{Token: tokenString})
+	fmt.Println(tokenString)
 }
 
+// @Summary Login a user
+// @Description This endpoint allows a user to log in with their username and password.
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param user body User true "User login details"
+// @Success 200 {object} LoginResponse "Login successful"
+// @Failure 400 {object} ErrorResponse "Invalid request"
+// @Failure 401 {object} ErrorResponse "Invalid credentials"
+// @Failure 500 {object} ErrorResponse "Internal server error"
+// @Router /api/login [post]
 func Login(w http.ResponseWriter, r *http.Request) {
 	var user User
 	if err := json.NewDecoder(r.Body).Decode(&user); err != nil {
+		http.Error(w, "Invalid request", http.StatusBadRequest)
 		return
 	}
-	hashedPassword, exists := users[user.Username]
-	if !exists || bcrypt.CompareHashAndPassword([]byte(hashedPassword),
-		[]byte(user.Password)) != nil {
+
+	// Получаем хешированный пароль пользователя из мапы users
+	storedUser, exists := users[user.Username]
+	if !exists || bcrypt.CompareHashAndPassword([]byte(storedUser.Password), []byte(user.Password)) != nil {
 		http.Error(w, "Invalid credentials", http.StatusUnauthorized)
 		return
 	}
-	claims := map[string]interface{}{
-		"username": user.Username,
-		"exp":      time.Now().Add(time.Hour * 72).Unix(),
-	}
-	_, tokenString, _ := tokenAuth.Encode(claims)
 
-	w.Header().Set("Authorization", "Bearer "+tokenString)
+	// Если авторизация успешна, возвращаем статус 200 OK
 	w.WriteHeader(http.StatusOK)
+	json.NewEncoder(w).Encode(LoginResponse{Message: "Login successful"})
 }
 
-// @Success 200 {object} ResponseAddress
-// @Failure 400 {object} ErrorResponse
-// @Failure 404 {object} ErrorResponse
-
-// Логика геокодирования
-// @Summary Get Geo Coordinates
-// @Description This endpoint allows you to get geo coordinates by address
+// @Summary Get Geo Coordinates by Address
+// @Description This endpoint allows you to get geo coordinates by address.
+// @Tags geo
+// @Accept json
+// @Produce json
 // @Param address body RequestAddressSearch true "Address search query"
-// @Router /api/address/geocode [post]
-// @Router /api/address/search [post]
+// @Param Authorization header string true "Bearer {token}"
 // @Success 200 {object} ResponseAddress "Успешное выполнение"
-// @Success 400 {object} ErrorResponse "Ошибка запроса"
-// @Success 500 {object} ErrorResponse "Ошибка подключения к серверу"
-func GetGeoCoordinates(query string) (ResponseAddresses, error) {
+// @Failure 400 {object} ErrorResponse "Ошибка запроса"
+// @Failure 500 {object} ErrorResponse "Ошибка подключения к серверу"
+// @Security BearerAuth
+// @Router /api/address/search [post]
+func GetGeoCoordinatesAddress(query string) (ResponseAddresses, error) {
 	url := "http://suggestions.dadata.ru/suggestions/api/4_1/rs/suggest/address"
 	reqData := map[string]string{"query": query}
 
@@ -171,85 +223,175 @@ func GetGeoCoordinates(query string) (ResponseAddresses, error) {
 	return addresses, nil
 }
 
+// @Summary Get Geo Coordinates by Latitude and Longitude
+// @Description This endpoint allows you to get geo coordinates by latitude and longitude.
+// @Tags geo
+// @Accept json
+// @Produce json
+// @Param lat query float64 true "Latitude"
+// @Param lng query float64 true "Longitude"
+// @Param Authorization header string true "Bearer {token}"
+// @Success 200 {object} ResponseAddress "Успешное выполнение"
+// @Failure 400 {object} ErrorResponse "Ошибка запроса"
+// @Failure 500 {object} ErrorResponse "Ошибка подключения к серверу"
+// @Security BearerAuth
+// @Router /api/address/geocode [post]
+func GetGeoCoordinatesGeocode(lat float64, lng float64) (ResponseAddresses, error) {
+	url := "http://suggestions.dadata.ru/suggestions/api/4_1/rs/geolocate/address"
+	data := map[string]float64{"lat": lat, "lon": lng}
+
+	jsonData, err := json.Marshal(data)
+	if err != nil {
+		return ResponseAddresses{}, err
+	}
+	req, err := http.NewRequest("POST", url, bytes.NewBuffer(jsonData))
+	if err != nil {
+		return ResponseAddresses{}, err
+	}
+
+	req.Header.Set("Content-Type", "application/json")
+	req.Header.Set("Authorization", "token d9e0649452a137b73d941aa4fb4fcac859372c8c")
+
+	resp, err := http.DefaultClient.Do(req)
+	if err != nil {
+		return ResponseAddresses{}, err
+	}
+	defer resp.Body.Close()
+
+	body, err := io.ReadAll(resp.Body)
+	if err != nil {
+		return ResponseAddresses{}, err
+	}
+
+	var response ResponseAddress
+	err = json.Unmarshal(body, &response)
+	if err != nil {
+		return ResponseAddresses{}, err
+	}
+
+	var addresses ResponseAddresses
+	for _, suggestion := range response.Suggestions {
+		address := &Address{
+			City:   suggestion.Address.City,
+			Street: suggestion.Address.Street,
+			House:  suggestion.Address.House,
+			Lat:    suggestion.Address.Lat,
+			Lon:    suggestion.Address.Lon,
+		}
+		addresses.Addresses = append(addresses.Addresses, address)
+	}
+
+	return addresses, nil
+}
+
 func main() {
-	signalChan := make(chan os.Signal, 1)
-	signal.Notify(signalChan, syscall.SIGINT, syscall.SIGTERM)
-	r := chi.NewRouter()
+	r := router()
 	srv := &http.Server{
 		Addr:    ":8080",
 		Handler: r,
 	}
+
 	go func() {
-
-		r.Use(middleware.Logger)
-		r.Use(proxyMiddleware)
-		r.Get("/swagger/*", httpSwagger.WrapHandler)
-		r.Post("/api/register", Register)
-		r.Post("/api/login", Login)
-		r.Post("/api/address/geocode", func(w http.ResponseWriter, r *http.Request) {
-			var req RequestAddressSearch
-			if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
-				http.Error(w, err.Error(), http.StatusInternalServerError)
-				return
-			}
-
-			geo, err := GetGeoCoordinates(req.Query) // Здесь можно передать запрос из тела
-			if err != nil {
-				http.Error(w, err.Error(), http.StatusInternalServerError)
-				return
-			}
-			jsonData, err := json.Marshal(geo)
-			if err != nil {
-				panic(err)
-			}
-			w.WriteHeader(http.StatusOK)
-			w.Write(jsonData)
-		})
-
-		r.Post("/api/address/search", func(w http.ResponseWriter, r *http.Request) {
-			var req RequestAddressSearch
-			if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
-				http.Error(w, err.Error(), http.StatusInternalServerError)
-				return
-			}
-
-			geo, err := GetGeoCoordinates(req.Query) // Здесь можно передать запрос из тела
-			if err != nil {
-				http.Error(w, err.Error(), http.StatusInternalServerError)
-				return
-			}
-
-			jsonData, err := json.Marshal(geo)
-			if err != nil {
-				panic(err)
-			}
-			w.WriteHeader(http.StatusOK)
-			w.Write(jsonData)
-		})
-
-		http.ListenAndServe(":8080", r)
+		if err := srv.ListenAndServe(); err != nil && err != http.ErrServerClosed {
+			fmt.Printf("Ошибка при запуске сервера: %v\n", err)
+		}
 	}()
+
+	signalChan := make(chan os.Signal, 1)
+	signal.Notify(signalChan, syscall.SIGINT, syscall.SIGTERM)
+
 	<-signalChan
 	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
 	defer cancel()
 	if err := srv.Shutdown(ctx); err != nil {
-		fmt.Printf("Ошибка при завершении работы %v", err)
+		fmt.Printf("Ошибка при завершении работы: %v\n", err)
 	} else {
-		fmt.Printf("Server stopped gracefully")
+		fmt.Println("Сервер остановлен корректно")
 	}
 }
 
 func proxyMiddleware(next http.Handler) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		// Проверяем, если путь начинается с /api
 		if strings.HasPrefix(r.URL.Path, "/api") {
-			// Передаем управление следующему обработчику
 			next.ServeHTTP(w, r)
 			return
 		}
-		// Перенаправление на hugo
 		proxyURL, _ := url.Parse("http://hugo:1313")
 		proxy := httputil.NewSingleHostReverseProxy(proxyURL)
 		proxy.ServeHTTP(w, r)
 	})
+}
+
+func TokenAuthMiddleware(next http.Handler) http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		token := r.Header.Get("Authorization")
+		if token == "" {
+			http.Error(w, "Unauthorized", http.StatusUnauthorized)
+			return
+		}
+
+		token = strings.TrimPrefix(token, "Bearer ")
+
+		_, err := tokenAuth.Decode(token)
+		if err != nil {
+			http.Error(w, "Unauthorized", http.StatusUnauthorized)
+			return
+		}
+
+		next.ServeHTTP(w, r)
+	})
+}
+
+func router() http.Handler {
+	r := chi.NewRouter()
+	r.Use(middleware.Logger)
+	r.Use(proxyMiddleware)
+	r.Get("/swagger/*", httpSwagger.WrapHandler)
+	r.Post("/api/register", Register)
+	r.Post("/api/login", Login)
+
+	r.With(TokenAuthMiddleware).Post("/api/address/geocode", func(w http.ResponseWriter, r *http.Request) {
+		var req GeocodeRequest
+		if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
+			http.Error(w, err.Error(), http.StatusBadRequest)
+			return
+		}
+
+		geo, err := GetGeoCoordinatesGeocode(req.Lat, req.Lng)
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+			return
+		}
+		jsonData, err := json.Marshal(geo)
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+			return
+		}
+		w.WriteHeader(http.StatusOK)
+		w.Write(jsonData)
+	})
+
+	r.With(TokenAuthMiddleware).Post("/api/address/search", func(w http.ResponseWriter, r *http.Request) {
+		var req RequestAddressSearch
+		if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
+			http.Error(w, err.Error(), http.StatusBadRequest)
+			return
+		}
+
+		geo, err := GetGeoCoordinatesAddress(req.Query)
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+			return
+		}
+
+		jsonData, err := json.Marshal(geo)
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+			return
+		}
+		w.WriteHeader(http.StatusOK)
+		w.Write(jsonData)
+	})
+
+	return r
 }
